--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -9,16 +9,8 @@
 <body>
     <canvas id="canvas" width="800" height="600" style="border:1px solid red;"></canvas>
 </body>
-<script src="jquery-2.1.4.js"></script>
 
 <script>
-    $.ajax({
-        url: " /api/logout",
-        type: "post",
-        success: function (data) {
-            console.log(data)
-        }
-    })
     var canvas = document.getElementById("canvas");
     var ctx = canvas.getContext("2d");
 
